# webgame-collection-api

./: .gitignore  Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: error.rs  lib.rs  node_ident.rs
src/: chat.rs  config.rs  error.rs  main.rs
src/auth/: auth_info.rs  login.rs  mod.rs  password_data.rs  refresh.rs  register.rs
src/schema/: mod.rs
src/schema/mutation/: auth.rs  chat.rs  mod.rs
src/schema/query/: auth.rs  game.rs  mod.rs  node.rs  user.rs
src/schema/subscription/: chat.rs  mod.rs
src/schema/types/: chat.rs  game.rs  localized_string.rs  mod.rs  node.rs  scalars.rs  user.rs
src/schema/types/resolvers/: game.rs  user.rs
