[package]
name = "webgame-collection-api"
version = "0.1.0"
authors = ["XiNiHa <anesin1109@naver.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
async-graphql = { git = "https://github.com/async-graphql/async-graphql" }
async-graphql-rocket = { git = "https://github.com/async-graphql/async-graphql" }
sqlx = { version=  "0.5.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json", "chrono" ] }
chrono = "0.4.19"
serde = "1.0.126"
serde_json = "1.0.64"
dotenv = "0.15.0"
ring = "0.16.20"
base64 = "0.13.0"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
anyhow = "1.0.41"

[features]
playground = []
