[package]
name = "webgame-collection-api"
version = "0.1.0"
authors = ["XiNiHa <anesin1109@naver.com>"]
edition = "2018"
resolver = "2"

[workspace]

[dependencies]
webgame-collection-api-macros = { path="macros", version="0.1.0" }

env_logger = "0.8.4"
actix-web = "4.0.0-beta.8"
async-graphql = { git = "https://github.com/async-graphql/async-graphql", branch="actix-web-v4-beta" }
async-graphql-actix-web = { git = "https://github.com/async-graphql/async-graphql", branch="actix-web-v4-beta" }
sqlx = { version = "0.5.5", features = [ "runtime-tokio-rustls", "postgres", "uuid", "json", "chrono" ] }
chrono = "0.4.19"
serde = "1.0.126"
serde_json = "1.0.64"
dotenv = "0.15.0"
ring = "0.16.20"
base64 = "0.13.0"
uuid = "0.8.2"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
anyhow = "1.0.41"
tokio = { version = "1.8.0", features = ["sync"] }
tokio-stream = "0.1.7"
futures = "0.3.15"
config = "0.11.0"
redis = { version = "0.21.1", features = ["tokio-comp"] }
deadpool-redis = { version = "0.9.0", features = ["config"] }

[features]
playground = []
sqs = []
